--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ h2 {
 }
 body {
   display: center;
-  background-image: url("images/pattern.jpg");
+  background-image: url("../images/pattern.jpg");
   background-repeat: repeat;
   background-size: 500px;
 }
